# esbuild-metafile

./: Cargo.toml  Makefile  package-lock.json  package.json  rustfmt.toml
.claude/rules/: rust.md  rust_tests.md
esbuild-metafile/: Cargo.toml
esbuild-metafile/src/: asset.rs  error.rs  esbuild_metafile.rs  filters.rs  http_preloader.rs  import.rs  input_in_output.rs  input_lookup.rs  input_properties.rs  instance.rs  lib.rs  output.rs  output_lookup.rs  output_properties.rs  path_renderer.rs  preloadable_asset.rs  raw_esbuild_metafile.rs  renders_path.rs
esbuild-metafile/src/filesystem/: mod.rs
esbuild-metafile/src/filters/: asset.rs  mod.rs  preload.rs  render_assets.rs
esbuild-metafile/src/test/: get_esbuild_metafile.rs  mod.rs
esbuild-metafile/src/test/fixtures/: esbuild-meta-basic.json  esbuild-meta-dedup.json  esbuild-meta-glb.json  esbuild-meta-orphan.json  esbuild-meta-svg.json
src/: asset.rs  filters.rs  http_preloader.rs  instance.rs  lib.rs  preloadable_asset.rs
src/filesystem/: get_file_extension.rs
src/test/: get_esbuild_metafile.rs  mod.rs
src/test/fixtures/: esbuild-meta-basic.json  esbuild-meta-fonts.json  esbuild-meta-glb.json
templates/fixtures/: template.html
