[package]
description = "Utilities for working with esbuild metafiles"
name = "esbuild-metafile"
license = "MIT"
version = "0.6.2"
edition = "2024"

[dependencies]
actix-utils = "3.0.1"
actix-web = "4.11.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
askama = "0.14.0"
dashmap = "6.1.0"
once_cell = "1.21.3"
pretty_assertions = "1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"

[dev-dependencies]
indoc = "2"
