[package]
description = "Utilities for working with esbuild metafiles"
name = "esbuild-metafile"
license = "MIT"
version = "0.9.1"
edition = "2024"
repository = "https://github.com/intentee/esbuild-metafile"

[dependencies]
actix-utils = { version = "=3.0.1", optional = true }
actix-web = { version = "=4.11.0", optional = true }
askama = { version = "=0.14.0", optional = true }
dashmap = "=6.1.0"
log = "=0.4.28"
once_cell = "=1.21.3"
serde = { version = "=1.0.228", features = ["derive", "rc"] }
serde_json = "=1.0.150"
thiserror = "=2.0.18"

[dev-dependencies]
indoc = "=2.0.7"
pretty_assertions = "=1.4.1"

[features]
default = []
actix_web = ["dep:actix-web", "dep:actix-utils"]
askama = ["dep:askama", "actix_web"]

[package.metadata.docs.rs]
all-features = true
