[package]
description = "Utilities for working with esbuild metafiles"
name = "esbuild-metafile"
license = "MIT"
version = "0.10.1"
edition = "2024"
repository = "https://github.com/intentee/esbuild-metafile"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
